[gd_scene load_steps=49 format=3 uid="uid://dpwcm3s7t344w"]

[ext_resource type="Script" path="res://Items/PlayerSpeed.gd" id="1_vl5uj"]
[ext_resource type="Texture2D" uid="uid://ca660f23prfyc" path="res://RogueFroggerAssets/RFAssets/Level/speedometerglow.png" id="3_buw3s"]
[ext_resource type="Script" path="res://Items/GlideBoots.gd" id="3_dpuf5"]
[ext_resource type="Script" path="res://Items/Dash.gd" id="4_36jmu"]
[ext_resource type="Script" path="res://Items/expl_B.gd" id="5_2gs8y"]
[ext_resource type="Shader" uid="uid://ccv8qa3n24f2x" path="res://Items/shadingPlayerSpeed.tres" id="5_rs54r"]
[ext_resource type="Shader" uid="uid://dmeyh0xw64y3q" path="res://Items/shadingGlideBoots.tres" id="5_sy5pp"]
[ext_resource type="Texture2D" uid="uid://vyjh8w55rr0u" path="res://RogueFroggerAssets/RFAssets/Level/glidebootsglow.png" id="6_7pduo"]
[ext_resource type="Texture2D" uid="uid://cb5cf0nxgbwol" path="res://RogueFroggerAssets/RFAssets/Level/fire-dashglowpng.png" id="9_wjxbm"]
[ext_resource type="Shader" uid="uid://c51wyln4li7u0" path="res://Items/shadingGrappleRope.tres" id="11_4ydew"]
[ext_resource type="Shader" uid="uid://ojtcn44gqc5b" path="res://Items/shadingDash.tres" id="11_ck568"]
[ext_resource type="Shader" uid="uid://4wgkx4w7bj1i" path="res://Items/shadingexpl_B.tres" id="11_dat5o"]
[ext_resource type="Texture2D" uid="uid://bqch01d5k0srg" path="res://RogueFroggerAssets/RFAssets/ExplodingBarrel/explbarrel_glow.png" id="12_iin3t"]
[ext_resource type="Script" path="res://Items/GrappleRope.gd" id="13_a0wwr"]
[ext_resource type="Texture2D" uid="uid://b8hl8mjlbba7r" path="res://RogueFroggerAssets/RFAssets/Level/grappleropeglow.png" id="15_m0ddy"]
[ext_resource type="Script" path="res://Items/Gamba.gd" id="16_3bh8x"]
[ext_resource type="Texture2D" uid="uid://d0cpq6rf35kim" path="res://RogueFroggerAssets/RFAssets/Level/gambaglow.png" id="17_5v3al"]
[ext_resource type="Shader" uid="uid://b5q7636esn1fu" path="res://Items/shadingGamba.tres" id="17_50xft"]
[ext_resource type="Script" path="res://Items/Shield.gd" id="17_njysa"]
[ext_resource type="Shader" uid="uid://drd4vprvkbdi1" path="res://Items/shadingShield.tres" id="18_kt2h8"]
[ext_resource type="Texture2D" uid="uid://b0hfbr5polckj" path="res://RogueFroggerAssets/RFAssets/PlayerShield/shieldglow.png" id="20_uciac"]
[ext_resource type="Script" path="res://Items/Follower.gd" id="22_d2h3b"]
[ext_resource type="Shader" uid="uid://cpp8pav277vbr" path="res://Items/shadingFollower.tres" id="22_unf15"]
[ext_resource type="Texture2D" uid="uid://be15lp37ucnes" path="res://RogueFroggerAssets/RFAssets/Level/follower_glow.png" id="23_8ygfu"]
[ext_resource type="Script" path="res://Items/Shrink.gd" id="25_14yh6"]
[ext_resource type="Shader" uid="uid://bxo3dodrjiwmy" path="res://Items/shadingShrink.tres" id="25_onvt6"]
[ext_resource type="Texture2D" uid="uid://cdrdptw7dxvng" path="res://RogueFroggerAssets/RFAssets/Level/shrinkglow.png" id="26_h4357"]
[ext_resource type="Script" path="res://Items/multi.gd" id="28_i5ad0"]
[ext_resource type="Shader" uid="uid://b2b2amsr8cdws" path="res://Items/shadingMulti.tres" id="28_omakc"]
[ext_resource type="Texture2D" uid="uid://d128o4talm3y1" path="res://RogueFroggerAssets/RFAssets/Level/growglow.png" id="30_v0hxw"]
[ext_resource type="Texture2D" uid="uid://dbxqf1ahlspr0" path="res://RogueFroggerAssets/RFAssets/Level/slowglow.png" id="31_f1now"]
[ext_resource type="Texture2D" uid="uid://ckh58jglfag4" path="res://RogueFroggerAssets/RFAssets/Level/longteleportglow.png" id="34_234jt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wrigo"]
size = Vector2(48, 48)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nd3lk"]
shader = ExtResource("5_rs54r")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kcrvm"]
size = Vector2(48, 48)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6whh1"]
shader = ExtResource("5_sy5pp")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2iiea"]
size = Vector2(48, 48)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xxsdt"]
shader = ExtResource("11_ck568")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g40br"]
size = Vector2(48, 48)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_600xy"]
shader = ExtResource("11_dat5o")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wqdux"]
size = Vector2(48, 48)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_df2u4"]
shader = ExtResource("11_4ydew")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_iar4c"]
shader = ExtResource("17_50xft")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j3dfj"]
size = Vector2(48, 48)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xetaj"]
shader = ExtResource("18_kt2h8")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_psk51"]
shader = ExtResource("22_unf15")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jamyc"]
shader = ExtResource("25_onvt6")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3egv3"]
shader = ExtResource("28_omakc")

[node name="Items" type="Node2D"]

[node name="PlayerSpeed" type="Area2D" parent="."]
visible = false
scale = Vector2(1.5, 1.5)
collision_layer = 8
collision_mask = 1921
script = ExtResource("1_vl5uj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerSpeed"]
shape = SubResource("RectangleShape2D_wrigo")

[node name="Sprite2D" type="Sprite2D" parent="PlayerSpeed"]
texture_filter = 1
material = SubResource("ShaderMaterial_nd3lk")
position = Vector2(-1.13687e-13, 0)
scale = Vector2(0.805, 0.805)
texture = ExtResource("3_buw3s")
region_rect = Rect2(-80, -64, 736, 680)

[node name="GlideBoots" type="Area2D" parent="."]
visible = false
scale = Vector2(1.5, 1.5)
collision_layer = 8
collision_mask = 1921
script = ExtResource("3_dpuf5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GlideBoots"]
shape = SubResource("RectangleShape2D_kcrvm")

[node name="Sprite2D" type="Sprite2D" parent="GlideBoots"]
texture_filter = 1
material = SubResource("ShaderMaterial_6whh1")
scale = Vector2(0.805, 0.805)
texture = ExtResource("6_7pduo")

[node name="Dash" type="Area2D" parent="."]
visible = false
scale = Vector2(1.5, 1.5)
collision_layer = 8
collision_mask = 1921
script = ExtResource("4_36jmu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Dash"]
shape = SubResource("RectangleShape2D_2iiea")

[node name="Sprite2D" type="Sprite2D" parent="Dash"]
texture_filter = 1
material = SubResource("ShaderMaterial_xxsdt")
scale = Vector2(0.805, 0.805)
texture = ExtResource("9_wjxbm")
region_rect = Rect2(-2, 7, 118, 107)

[node name="expl_B" type="Area2D" parent="."]
visible = false
scale = Vector2(1.5, 1.5)
collision_layer = 8
collision_mask = 1921
script = ExtResource("5_2gs8y")

[node name="CollisionShape2D" type="CollisionShape2D" parent="expl_B"]
shape = SubResource("RectangleShape2D_g40br")

[node name="Sprite2D" type="Sprite2D" parent="expl_B"]
texture_filter = 1
material = SubResource("ShaderMaterial_600xy")
scale = Vector2(0.805, 0.805)
texture = ExtResource("12_iin3t")
region_rect = Rect2(75, 75, 43, 44)

[node name="GrappleRope" type="Area2D" parent="."]
visible = false
scale = Vector2(1.5, 1.5)
collision_layer = 8
collision_mask = 1921
script = ExtResource("13_a0wwr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrappleRope"]
shape = SubResource("RectangleShape2D_wqdux")

[node name="Sprite2D" type="Sprite2D" parent="GrappleRope"]
texture_filter = 1
material = SubResource("ShaderMaterial_df2u4")
scale = Vector2(0.805, 0.805)
texture = ExtResource("15_m0ddy")

[node name="Gamba" type="Area2D" parent="."]
visible = false
scale = Vector2(1.5, 1.5)
collision_layer = 8
collision_mask = 1921
script = ExtResource("16_3bh8x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gamba"]
shape = SubResource("RectangleShape2D_wqdux")

[node name="Sprite2D" type="Sprite2D" parent="Gamba"]
texture_filter = 1
material = SubResource("ShaderMaterial_iar4c")
scale = Vector2(0.805, 0.805)
texture = ExtResource("17_5v3al")

[node name="Shield" type="Area2D" parent="."]
visible = false
scale = Vector2(1.5, 1.5)
collision_layer = 8
collision_mask = 1921
script = ExtResource("17_njysa")

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="Shield"]
shape = SubResource("RectangleShape2D_j3dfj")

[node name="Sprite2D" type="Sprite2D" parent="Shield"]
texture_filter = 1
material = SubResource("ShaderMaterial_xetaj")
scale = Vector2(0.805, 0.805)
texture = ExtResource("20_uciac")
region_rect = Rect2(-2, 7, 118, 107)

[node name="Follower" type="Area2D" parent="."]
visible = false
scale = Vector2(1.5, 1.5)
collision_layer = 8
collision_mask = 1921
script = ExtResource("22_d2h3b")

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="Follower"]
shape = SubResource("RectangleShape2D_j3dfj")

[node name="Sprite2D" type="Sprite2D" parent="Follower"]
texture_filter = 1
material = SubResource("ShaderMaterial_psk51")
scale = Vector2(0.805, 0.805)
texture = ExtResource("23_8ygfu")

[node name="Shrink" type="Area2D" parent="."]
visible = false
scale = Vector2(1.5, 1.5)
collision_layer = 8
collision_mask = 1921
script = ExtResource("25_14yh6")

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="Shrink"]
shape = SubResource("RectangleShape2D_j3dfj")

[node name="Sprite2D" type="Sprite2D" parent="Shrink"]
texture_filter = 1
material = SubResource("ShaderMaterial_jamyc")
scale = Vector2(0.805, 0.805)
texture = ExtResource("26_h4357")

[node name="Multi" type="Area2D" parent="."]
visible = false
scale = Vector2(1.5, 1.5)
collision_layer = 8
collision_mask = 1921
script = ExtResource("28_i5ad0")

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="Multi"]
shape = SubResource("RectangleShape2D_j3dfj")

[node name="Sprite2D" type="Sprite2D" parent="Multi"]
texture_filter = 1
material = SubResource("ShaderMaterial_3egv3")
scale = Vector2(0.805, 0.805)
texture = ExtResource("17_5v3al")

[node name="ItemCycleTimer" type="Timer" parent="Multi"]
one_shot = true

[node name="Slow" type="Area2D" parent="."]
visible = false
texture_filter = 1
scale = Vector2(1.5, 1.5)
collision_layer = 8
collision_mask = 1921

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="Slow"]
shape = SubResource("RectangleShape2D_j3dfj")

[node name="Sprite2D" type="Sprite2D" parent="Slow"]
texture_filter = 1
scale = Vector2(0.805, 0.805)
texture = ExtResource("31_f1now")

[node name="Grow" type="Area2D" parent="."]
visible = false
texture_filter = 1
scale = Vector2(1.5, 1.5)
collision_layer = 8
collision_mask = 1921

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="Grow"]
shape = SubResource("RectangleShape2D_j3dfj")

[node name="Sprite2D" type="Sprite2D" parent="Grow"]
scale = Vector2(0.805, 0.805)
texture = ExtResource("30_v0hxw")

[node name="LongTeleport" type="Area2D" parent="."]
visible = false
scale = Vector2(1.5, 1.5)
collision_layer = 8
collision_mask = 1921

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="LongTeleport"]
shape = SubResource("RectangleShape2D_j3dfj")

[node name="Sprite2D" type="Sprite2D" parent="LongTeleport"]
scale = Vector2(0.805, 0.805)
texture = ExtResource("34_234jt")

[connection signal="body_entered" from="PlayerSpeed" to="PlayerSpeed" method="_on_body_entered"]
[connection signal="body_entered" from="GlideBoots" to="GlideBoots" method="_on_body_entered"]
[connection signal="body_entered" from="Dash" to="Dash" method="_on_body_entered"]
[connection signal="body_entered" from="expl_B" to="expl_B" method="_on_body_entered"]
[connection signal="body_entered" from="GrappleRope" to="GrappleRope" method="_on_body_entered"]
[connection signal="body_entered" from="Gamba" to="Gamba" method="_on_body_entered"]
[connection signal="body_entered" from="Shield" to="Shield" method="_on_body_entered"]
[connection signal="body_entered" from="Follower" to="Follower" method="_on_body_entered"]
[connection signal="body_entered" from="Shrink" to="Shrink" method="_on_body_entered"]
[connection signal="body_entered" from="Multi" to="Multi" method="_on_body_entered"]
[connection signal="timeout" from="Multi/ItemCycleTimer" to="Multi" method="_on_item_cycle_timer_timeout"]
